{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 27,
  "lineage": "0fff17e7-955c-4b34-1209-686ef5a55da9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "water_bot_sample_terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:internet-gateway/igw-013db973f528ce34b",
            "id": "igw-013db973f528ce34b",
            "owner_id": "590183827936",
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "dependencies": [
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "waterbot-sample_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590183827936:loadbalancer/app/waterbot-sample-lb/6e8e65b8c767c93d",
            "arn_suffix": "app/waterbot-sample-lb/6e8e65b8c767c93d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "waterbot-sample-lb-1291913336.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:590183827936:loadbalancer/app/waterbot-sample-lb/6e8e65b8c767c93d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "waterbot-sample-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00f64caa62c921f18"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09100ef71b75a57a1"
              },
              {
                "subnet_id": "subnet-0f82a001bd97e9109"
              }
            ],
            "subnets": [
              "subnet-09100ef71b75a57a1",
              "subnet-0f82a001bd97e9109"
            ],
            "vpc_id": "vpc-0d8affe7867449232",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.waterbot-sample_lb_sg",
            "aws_subnet.water_bot_sample_public_subnet1",
            "aws_subnet.water_bot_sample_public_subnet2",
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "waterbot-sample_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590183827936:listener/app/waterbot-sample-lb/6e8e65b8c767c93d/2888ee9ee6eacd2f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590183827936:targetgroup/waterbot-sample-tg/a92044923c729505",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590183827936:listener/app/waterbot-sample-lb/6e8e65b8c767c93d/2888ee9ee6eacd2f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:590183827936:loadbalancer/app/waterbot-sample-lb/6e8e65b8c767c93d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.waterbot-sample_lb",
            "aws_lb_target_group.waterbot-sample_tg",
            "aws_security_group.waterbot-sample_lb_sg",
            "aws_subnet.water_bot_sample_public_subnet1",
            "aws_subnet.water_bot_sample_public_subnet2",
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "waterbot-sample_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590183827936:targetgroup/waterbot-sample-tg/a92044923c729505",
            "arn_suffix": "targetgroup/waterbot-sample-tg/a92044923c729505",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590183827936:targetgroup/waterbot-sample-tg/a92044923c729505",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "waterbot-sample-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "dependencies": [
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "water_bot_sample_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-013db973f528ce34b",
            "id": "r-rtb-0f8e28b651365c61e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8e28b651365c61e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.water_bot_sample_terraform_igw",
            "aws_route_table.water_bot_sample_terraform_route_table",
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "water_bot_sample_terraform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:route-table/rtb-0f8e28b651365c61e",
            "id": "rtb-0f8e28b651365c61e",
            "owner_id": "590183827936",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "water_bot_sample_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0806477790604099c",
            "route_table_id": "rtb-0f8e28b651365c61e",
            "subnet_id": "subnet-0f82a001bd97e9109"
          },
          "dependencies": [
            "aws_route_table.water_bot_sample_terraform_route_table",
            "aws_subnet.water_bot_sample_public_subnet1",
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "water_bot_sample_public_subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0557354f9de04c89b",
            "route_table_id": "rtb-0f8e28b651365c61e",
            "subnet_id": "subnet-09100ef71b75a57a1"
          },
          "dependencies": [
            "aws_route_table.water_bot_sample_terraform_route_table",
            "aws_subnet.water_bot_sample_public_subnet2",
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "waterbot-sample_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:security-group/sg-00f64caa62c921f18",
            "description": "Security group for waterbot-sample load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f64caa62c921f18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "waterbot-sample-lb-security-group",
            "name_prefix": "",
            "owner_id": "590183827936",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "waterbot-sample_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:security-group/sg-05ba71d05b9de5a07",
            "description": "Security group for waterbot-sample ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ba71d05b9de5a07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f64caa62c921f18"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "waterbot-sample-service-security-group",
            "name_prefix": "",
            "owner_id": "590183827936",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.waterbot-sample_lb_sg",
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "water_bot_sample_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:subnet/subnet-0f82a001bd97e9109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f82a001bd97e9109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183827936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "dependencies": [
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "water_bot_sample_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:subnet/subnet-09100ef71b75a57a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09100ef71b75a57a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183827936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d8affe7867449232"
          },
          "dependencies": [
            "aws_vpc.water_bot_sample_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "water_bot_sample_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183827936:vpc/vpc-0d8affe7867449232",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0e6fceff45811bb52",
            "default_route_table_id": "rtb-094d6df5a61be497c",
            "default_security_group_id": "sg-091b042337bed64f1",
            "dhcp_options_id": "dopt-04d33051464af59b0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8affe7867449232",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094d6df5a61be497c",
            "owner_id": "590183827936",
            "tags": {
              "Name": "waterbot-sampleVPCTerraform"
            },
            "tags_all": {
              "Name": "waterbot-sampleVPCTerraform"
            }
          }
        }
      ]
    }
  ]
}